opam-version: "2.0"
name: "coq-ceres"
version: "dev"
synopsis: "Library for serialization to S-expressions"
maintainer: "Li-yao Xia <lysxia@gmail.com>"
license: "MIT"

homepage: "https://github.com/Lysxia/coq-ceres"
dev-repo: "git+https://github.com/Lysxia/coq-ceres"
bug-reports: "https://github.com/Lysxia/coq-ceres/issues"

authors: [ "Li-yao Xia" ]

depends: [
  "dune" {>= "2.8" & build}
  "coq" {>= "8.8"}
]

build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [ "dune" "build" "-p" name "test" "tutorial" ]

tags: [
  "keyword:serialization"
  "keyword:debugging"
]
